manifests/seraphim/prod/kubeai/Namespace-kubeai.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
  name: kubeai
