manifests/seraphim/prod/kubeai/Deployment-kubeai.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: kubeai
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeai
    app.kubernetes.io/version: v0.23.2
    helm.sh/chart: kubeai-0.23.2
  name: kubeai
  namespace: kubeai
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: kubeai
      app.kubernetes.io/name: kubeai
  template:
    metadata:
      annotations:
        checksum/config: 6686cff62f9003805bf9563565e7cd86a49a42bc433c64be18b87aabf7612e20
      labels:
        app.kubernetes.io/instance: kubeai
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: kubeai
        app.kubernetes.io/version: v0.23.2
        helm.sh/chart: kubeai-0.23.2
    spec:
      containers:
        - args: []
          command:
            - /app/manager
          image: ghcr.io/kubeai-project/kubeai:v0.23.2
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 120
            periodSeconds: 20
          name: kubeai
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - mountPath: /app/config
              name: config
      securityContext:
        runAsNonRoot: true
      serviceAccountName: kubeai
      terminationGracePeriodSeconds: 10
      volumes:
        - configMap:
            name: kubeai-config
          name: config
