manifests/seraphim/prod/kubeai/StatefulSet-open-webui.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: kubeai
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/version: 0.6.41
    helm.sh/chart: open-webui-8.19.0
  name: open-webui
  namespace: kubeai
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: open-webui
      app.kubernetes.io/instance: kubeai
  serviceName: open-webui
  template:
    metadata:
      labels:
        app.kubernetes.io/component: open-webui
        app.kubernetes.io/instance: kubeai
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: open-webui
        app.kubernetes.io/version: 0.6.41
        helm.sh/chart: open-webui-8.19.0
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: ENABLE_OLLAMA_API
              value: "False"
            - name: OPENAI_API_BASE_URL
              value: http://kubeai/openai/v1
            - name: OPENAI_API_KEY
              value: 0p3n-w3bu!
            - name: WEBUI_AUTH
              value: "False"
            - name: OPENAI_API_KEYS
              value: not-used
            - name: SHOW_ADMIN_DETAILS
              value: "false"
            - name: SAFE_MODE
              value: "true"
            - name: ENABLE_EVALUATION_ARENA_MODELS
              value: "False"
          image: ghcr.io/open-webui/open-webui:0.6.41
          imagePullPolicy: IfNotPresent
          name: open-webui
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
          tty: true
          volumeMounts:
            - mountPath: /app/backend/data
              name: data
      enableServiceLinks: false
      serviceAccountName: existing-sa
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: open-webui
