manifests/seraphim/prod/kubeai/Service-kubeai.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: kubeai
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubeai
    app.kubernetes.io/version: v0.23.2
    helm.sh/chart: kubeai-0.23.2
  name: kubeai
  namespace: kubeai
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: kubeai
    app.kubernetes.io/name: kubeai
  type: ClusterIP
