manifests/seraphim/prod/kubeai/Service-open-webui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: kubeai
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: open-webui
    app.kubernetes.io/version: 0.6.41
    helm.sh/chart: open-webui-8.19.0
  name: open-webui
  namespace: kubeai
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/component: open-webui
    app.kubernetes.io/instance: kubeai
  type: ClusterIP
