manifests/seraphim/prod/kubeai/HTTPRoute-chat.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  name: chat
  namespace: kubeai
spec:
  hostnames:
    - chat.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: open-webui
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
