manifests/seraphim/prod/kubeai/HTTPRoute-kubeai.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "10"
  name: kubeai
  namespace: kubeai
spec:
  hostnames:
    - kubeai.vegapunk.cloud
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: kubeai
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
